@@ -81,6 +81,7 @@ function Collection (db, collectionName, pkFactory, options) {
  *  - **serializeFunctions** {Boolean, default:false}, serialize functions on the document.
  *  - **forceServerObjectId** {Boolean, default:false}, let server assign ObjectId instead of the driver
  *  - **checkKeys** {Boolean, default:true}, allows for disabling of document key checking (WARNING OPENS YOU UP TO INJECTION ATTACKS)
+ *  - **fullResult** {Boolean, default:false}, returns the full result document (document returned will differ by server version)
  *
  * @param {Array|Object} docs
  * @param {Object} [options] optional options for insert command
@@ -99,6 +100,7 @@ Collection.prototype.insert = function() { return core.insert; }();
  *  - **fsync**, (Boolean, default:false) write waits for fsync before returning, from MongoDB 2.6 on, fsync cannot be combined with journal
  *  - **j**, (Boolean, default:false) write waits for journal sync before returning
  *  - **single** {Boolean, default:false}, removes the first document found.
+ *  - **fullResult** {Boolean, default:false}, returns the full result document (document returned will differ by server version)
  *
  * @param {Object} [selector] optional select, no selector is equivalent to removing all documents.
  * @param {Object} [options] additional options during remove.
@@ -152,6 +154,7 @@ Collection.prototype.save = function() { return core.save; }();
  *  - **multi** {Boolean, default:false}, update all documents matching the selector.
  *  - **serializeFunctions** {Boolean, default:false}, serialize functions on the document.
  *  - **checkKeys** {Boolean, default:true}, allows for disabling of document key checking (WARNING OPENS YOU UP TO INJECTION ATTACKS)
+ *  - **fullResult** {Boolean, default:false}, returns the full result document (document returned will differ by server version)
  *
  * @param {Object} selector the query to select the document/documents to be updated
  * @param {Object} document the fields/vals to be updated, or in the case of an upsert operation, inserted.
