@@ -141,6 +141,16 @@ var BatchWriteResult = function(bulkResult) {
   }
 
   /**
+   * Retrieve lastOp if available
+   *
+   * @return {Array}
+   * @api public
+   */
+  this.getLastOp = function() {
+    return bulkResult.lastOp;
+  }
+
+  /**
    * Retrieve the write concern error if any
    *
    * @return {WriteConcernError}
@@ -242,6 +252,11 @@ var mergeBatchResults = function(ordered, batch, bulkResult, err, result) {
     return;
   } else if(result.ok == 0 && bulkResult.ok == 0) {
     return;
+  }
+
+  // Add lastop if available
+  if(result.lastOp) {
+    bulkResult.lastOp = result.lastOp;
   }
 
   // If we have an insert Batch type
