@@ -61,6 +61,9 @@ var insertWithWriteCommands = function(self, docs, options, callback) {
   // Checkout a write connection
   var connection = self.db.serverConfig.checkoutWriter();  
 
+  // Do we return the actual result document
+  var fullResult = typeof options.fullResult == 'boolean' ? options.fullResult : false;
+
   // Collect errorOptions
   var errorOptions = shared._getWriteConcern(self, options);
 
@@ -115,6 +118,7 @@ var insertWithWriteCommands = function(self, docs, options, callback) {
           return callback(error, null);
         }
 
+        if(fullResult) return callback(null, result);
         // Return the results for a whole batch
         callback(null, docs)
     });    
@@ -141,6 +145,7 @@ var insertWithWriteCommands = function(self, docs, options, callback) {
           return callback(error, null);
         }
 
+        if(fullResult) return callback(null, result.getRawResponse());
         // Return the results for a whole batch
         callback(null, docs)
       });
@@ -188,6 +193,9 @@ var insertAll = function insertAll (self, docs, options, callback) {
   // Get checkKeys value
   var checkKeys = typeof options.checkKeys != 'boolean' ? true : options.checkKeys;
 
+  // Do we return the actual result document
+  var fullResult = typeof options.fullResult == 'boolean' ? options.fullResult : false;
+
   // Pass in options
   var insertCommand = new InsertCommand(
       self.db
@@ -232,6 +240,7 @@ var insertAll = function insertAll (self, docs, options, callback) {
     // Execute command with safe options (rolls up both command and safe command into one and executes them on the same connection)
     self.db._executeInsertCommand(insertCommand, commandOptions, handleWriteResults(function (err, error) {
       if(err) return callback(err, null);
+      if(fullResult) return callback(null, error);
       callback(null, docs);
     }));
   } else if(shared._hasWriteConcern(errorOptions) && callback == null) {
@@ -291,6 +300,9 @@ var removeWithWriteCommands = function(self, selector, options, callback) {
   var limit = options.single == true ? 1 : 0;
   var upsert = typeof options.upsert == 'boolean' ? options.upsert : false;
 
+  // Do we return the actual result document
+  var fullResult = typeof options.fullResult == 'boolean' ? options.fullResult : false;
+
   // Collect errorOptions
   var errorOptions = shared._getWriteConcern(self, options);
 
@@ -333,6 +345,7 @@ var removeWithWriteCommands = function(self, selector, options, callback) {
         return callback(error, null);
       }
       
+      if(fullResult) return callback(null, result);
       // Backward compatibility format
       var r = backWardsCompatibiltyResults(result, 'remove');      
       // Return the results for a whole batch
@@ -369,6 +382,9 @@ var remove = function remove(selector, options, callback) {
   selector = selector == null ? {} : selector;
   // Set up flags for the command, if we have a single document remove
   var flags = 0 | (options.single ? 1 : 0);
+
+  // Do we return the actual result document
+  var fullResult = typeof options.fullResult == 'boolean' ? options.fullResult : false;
 
   // DbName
   var dbName = options['dbName'];
@@ -409,6 +425,7 @@ var remove = function remove(selector, options, callback) {
     // Execute command with safe options (rolls up both command and safe command into one and executes them on the same connection)
     this.db._executeRemoveCommand(deleteCommand, commandOptions, handleWriteResults(function (err, error) {
       if(err) return callback(err, null);
+      if(fullResult) return callback(null, error);
       callback(null, error[0].n);
     }));
   } else if(shared._hasWriteConcern(errorOptions) && callback == null) {
@@ -495,6 +512,9 @@ var updateWithWriteCommands = function(self, selector, document, options, callba
   var multi = typeof options.multi == 'boolean' ? options.multi : false;
   var upsert = typeof options.upsert == 'boolean' ? options.upsert : false;
 
+  // Do we return the actual result document
+  var fullResult = typeof options.fullResult == 'boolean' ? options.fullResult : false;
+
   // Collect errorOptions
   var errorOptions = shared._getWriteConcern(self, options);
 
@@ -545,6 +565,7 @@ var updateWithWriteCommands = function(self, selector, document, options, callba
         return callback(error, null);
       }
       
+      if(fullResult) return callback(null, result);
       // Backward compatibility format
       var r = backWardsCompatibiltyResults(result, 'update');
       // Return the results for a whole batch
@@ -629,6 +650,9 @@ var update = function update(selector, document, options, callback) {
   if(selector == null || typeof selector != 'object') return callback(new Error("selector must be a valid JavaScript object"));
   if(document == null || typeof document != 'object') return callback(new Error("document must be a valid JavaScript object"));
 
+  // Do we return the actual result document
+  var fullResult = typeof options.fullResult == 'boolean' ? options.fullResult : false;
+
   // Either use override on the function, or go back to default on either the collection
   // level or db
   if(options['serializeFunctions'] != null) {
@@ -670,6 +694,7 @@ var update = function update(selector, document, options, callback) {
     // Execute command with safe options (rolls up both command and safe command into one and executes them on the same connection)
     this.db._executeUpdateCommand(updateCommand, commandOptions, handleWriteResults(function(err, error) {
       if(err) return callback(err, null);
+      if(fullResult) return callback(null, error);
       callback(null, error[0].n, error[0]);
     }));
   } else if(shared._hasWriteConcern(errorOptions) && callback == null) {
